[gd_scene load_steps=2 format=3 uid="uid://jqgcmvh426i4"]

[ext_resource type="Script" path="res://scripts/spell_selection_menu.gd" id="1_nfugk"]

[node name="SpellSelectionMenu" type="CanvasLayer"]
follow_viewport_scale = 2.615
script = ExtResource("1_nfugk")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -379.0
offset_top = -196.0
offset_right = 392.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 269.0
offset_top = 111.0
offset_right = 515.0
offset_bottom = 135.0
text = "Choose your starting spell!"
horizontal_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 280.0
offset_top = 192.0
offset_right = 515.0
offset_bottom = 272.0
alignment = 1

[node name="SpellButton1" type="Button" parent="Panel/BoxContainer"]
layout_mode = 2
text = "Fireball"
icon_alignment = 1

[node name="SpellName" type="Label" parent="Panel/BoxContainer/SpellButton1"]
visible = false
layout_mode = 0
offset_left = 2.0
offset_top = -34.0
offset_right = 60.0
offset_bottom = -11.0

[node name="SpellButton2" type="Button" parent="Panel/BoxContainer"]
layout_mode = 2
text = "Ice Shard"
icon_alignment = 1

[node name="SpellName" type="Label" parent="Panel/BoxContainer/SpellButton2"]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = -35.0
offset_right = 77.0
offset_bottom = -12.0

[node name="SpellButton3" type="Button" parent="Panel/BoxContainer"]
layout_mode = 2
text = "Lightning"
icon_alignment = 1

[node name="SpellName" type="Label" parent="Panel/BoxContainer/SpellButton3"]
visible = false
layout_mode = 0
offset_left = 4.0
offset_top = -31.0
offset_right = 77.0
offset_bottom = -8.0

[node name="Description" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 180.0
offset_top = 321.0
offset_right = 220.0
offset_bottom = 344.0
horizontal_alignment = 1
vertical_alignment = 3
